--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                                         <td style="width:35%">
                                             <div name="time">
                                                 <label style="width:30%">Time weight:</label>
-                                                <input type="number" id="timewight" name="timewight" style="width:30%"> %
+                                                <input type="number" id="timewight" name="timewight" style="width:30%" disabled> %
                                                 <br>
                                                 <label style="width:30%">Target year:</label>
                                                 <input type="number" id="targetyear" name="targetyear" style="width:30%"> days
