update the validation

--- a/index.html
+++ b/index.html
@@ -518,6 +518,46 @@
                                 if (noisebyexp > 5 || noisebyexp < 1) {
                                     document.getElementById("txtnoisebyExp").style.border = "2px dashed red"
                                 }
+                                var txtairbyExp = Number($("txtairbyExp").val());
+                                if (txtairbyExp > 5 || txtairbyExp < 1) {
+                                    document.getElementById("txtairbyExp").style.border = "2px dashed red"
+                                }
+                                var txtsoilbyExp = Number($("txtsoilbyExp").val());
+                                if (txtsoilbyExp > 5 || txtsoilbyExp < 1) {
+                                    document.getElementById("txtsoilbyExp").style.border = "2px dashed red"
+                                }
+                                var txtheatbyExp = Number($("txtheatbyExp").val());
+                                if (txtheatbyExp > 5 || txtheatbyExp < 1) {
+                                    document.getElementById("txtheatbyExp").style.border = "2px dashed red"
+                                }
+                                var txtgroundwaterbyExp = Number($("txtgroundwaterbyExp").val());
+                                if (txtgroundwaterbyExp > 5 || txtgroundwaterbyExp < 1) {
+                                    document.getElementById("txtgroundwaterbyExp").style.border = "2px dashed red"
+                                }
+                                var txOpticalbyExp = Number($("txOpticalbyExp").val());
+                                if (txOpticalbyExp > 5 || txOpticalbyExp < 1) {
+                                    document.getElementById("txOpticalbyExp").style.border = "2px dashed red"
+                                }
+                                var txtPerformancebyExp = Number($("txtPerformancebyExp").val());
+                                if (txtPerformancebyExp > 5 || txtPerformancebyExp < 1) {
+                                    document.getElementById("txtPerformancebyExp").style.border = "2px dashed red"
+                                }
+                                var txtQualitybyExp = Number($("txtQualitybyExp").val());
+                                if (txtQualitybyExp > 5 || txtQualitybyExp < 1) {
+                                    document.getElementById("txtQualitybyExp").style.border = "2px dashed red"
+                                }
+                                var txtDurabilitybyExp = Number($("txtDurabilitybyExp").val());
+                                if (txtDurabilitybyExp > 5 || txtDurabilitybyExp < 1) {
+                                    document.getElementById("txtDurabilitybyExp").style.border = "2px dashed red"
+                                }
+                                var txtAbilitybyExp = Number($("txtAbilitybyExp").val());
+                                if (txtAbilitybyExp > 5 || txtAbilitybyExp < 1) {
+                                    document.getElementById("txtAbilitybyExp").style.border = "2px dashed red"
+                                }
+                                var txtValueweightbyExp = Number($("txtValueweightbyExp").val());
+                                if (txtValueweightbyExp > 5 || txtValueweightbyExp < 1) {
+                                    document.getElementById("txtValueweightbyExp").style.border = "2px dashed red"
+                                }
                                 
                             });
 
